--- a/index.html
+++ b/index.html
@@ -4,9 +4,42 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First Assignment</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/7.0.1/css/all.min.css" integrity="sha512-2SwdPD6INVrV/lHTZbO2nodKhrnDdJK9/kg2XD1r9uGqPo1cUbujc+IYdlYdEErWNu69gVcYgdxlmVmzTWnetw==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel="stylesheet" href="./style.css">
 </head>
 <body>
-    <h1>Hello world</h1>
+    <!-- Navbar Section -->
+    <nav>
+        <div class="logo-navbar"><a href=""><img src="./assets/logo-navbar.png" alt=""></a></div>
+        <div class="menu">
+            <a href="">Feature</a>
+            <a href="">How It Works</a>
+            <a href="">Why It's Different</a>
+        </div>
+        <div class="btno">
+            <a href="" >Get Early Access</a>
+        </div>
+    </nav>
+    <!-- Banner Section Starts Here -->
+   
+    <div class="banner-container">
+          <div class="text-container">
+            <p class="first-p"><i class="fa-regular fa-circle"></i>Early Access Now Open</p>
+           <section class="head">
+             <h2 class="head-one">Structured Thinking</h2>
+            <h2 class="head-two">Not Just Note-Taking</h2>
+           </section>
+            <p class="para-one">A private space to store notes, links, and learning summaries — designed to <br>
+                help you think clearly, connect ideas, and turn learning into long-term knowledge.</p>
+                  <div class="btnt">
+            <a href="" class="btntt" >Start Building Your Vault <i class="fa-solid fa-arrow-right" style="margin-left: 3px;"></i></a>
+            <a href="" class="btnttt"> <i class="fa-solid fa-play"></i> See How It Works</a>
+
+          </div>
+      
+
+    </div>
+   
+
 </body>
 </html>
