second brain section end

--- a/index.html
+++ b/index.html
@@ -75,5 +75,26 @@
     </div>
     
   </section>
+    <!-- Card Section Ends Here -->
+     <!-- Second Brain Section Here -->
+<section class="second-brain">
+
+     <div class="brain-img">
+        <img src="./assets/knowledge.png" alt="">
+        </div>
+        <div class="second-text">
+            <p class="para-head">THE SOLUTION</p>
+            <h2>Your second brain, Structured by design.</h2>
+            <p class="para-inon">Personal Knowledge Vault isn't another note-taking app. It's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.</p>
+            <ul  class="list-f" style="list-style-type: none;  ">
+                <li class="li-o"> <i class="fa-regular fa-square-check"></i> Capture ideas with structure built-in from day one</li>
+                <li class="li-t"><i class="fa-regular fa-square-check"></i> Connect related concepts automatically as you write</li>
+                <li class="li-th"><i class="fa-regular fa-square-check"></i> Build lasting knowledge through reflection prompts</li>
+                <li class="li-f"><i class="fa-regular fa-square-check"></i> Find anything instantly with semantic search</li>
+            </ul>
+        </div>
+      
+    </section>
+
 </body>
 </html>
