footer section end

--- a/index.html
+++ b/index.html
@@ -87,13 +87,36 @@
             <h2>Your second brain, Structured by design.</h2>
             <p class="para-inon">Personal Knowledge Vault isn't another note-taking app. It's a thinking environment where every note, link, and summary becomes part of an interconnected web of understanding.</p>
             <ul  class="list-f" style="list-style-type: none;  ">
-                <li class="li-o"> <i class="fa-regular fa-square-check"></i> Capture ideas with structure built-in from day one</li>
-                <li class="li-t"><i class="fa-regular fa-square-check"></i> Connect related concepts automatically as you write</li>
-                <li class="li-th"><i class="fa-regular fa-square-check"></i> Build lasting knowledge through reflection prompts</li>
-                <li class="li-f"><i class="fa-regular fa-square-check"></i> Find anything instantly with semantic search</li>
+                <li class="li-o"> <img src="./assets/CheckCircle.png" alt=""> Capture ideas with structure built-in from day one</li>
+                <li class="li-t"><img src="./assets/CheckCircle.png" alt="">  Connect related concepts automatically as you write</li>
+                <li class="li-th"><img src="./assets/CheckCircle.png" alt="">  Build lasting knowledge through reflection prompts</li>
+                <li class="li-f"><img src="./assets/CheckCircle.png" alt="">  Find anything instantly with semantic search</li>
             </ul>
         </div>
       
+    </section>
+    <!-- Footer Section Here Starts 000000000000000000000000000000000 -->
+    <section class="fooder-head">
+        <div class="link-container">
+            <div class="fooder-img">
+                <img src="./assets/logo-footer.png" alt="">
+            </div>
+            <div class="social-links">
+                    <h4>Socil Links</h4>
+                    <div class="img-three">
+                        <a href=""><i class="fa-brands fa-x-twitter"></i></a>
+                        <a href=""><i class="fa-brands fa-square-linkedin"></i></a>
+                        <a href=""><i class="fa-brands fa-square-facebook"></i></a>
+                    </div>
+                    
+
+            </div>
+        </div>
+        <hr class="line">
+
+        <div class="fooder-end">
+            <p>  <b>© 2026 Personal Knowledge Vault. All rights reserved.</b></p>
+        </div>
     </section>
 
 </body>
