alham dullia done

--- a/index.html
+++ b/index.html
@@ -95,7 +95,17 @@
         </div>
       
     </section>
-    <!-- Footer Section Here Starts 000000000000000000000000000000000 -->
+   
+      <!-- Early Access Section start 111111111111111111111111111 -->
+ 
+      <section class="access-container">
+        <h1>Ready to Think  More Clearly?</h1>
+        <p >Join thousands of learners who are building their personal knowledge vaults.Start free, no credit card required.</p>
+        <p class="nine"> <b>Get Early Access   </b><i class="fa-solid fa-arrow-right-long" style="color: white; text-align: right;" ></i></p>
+        <p>Free during early access • No credit card needed</p>
+      </section>
+
+         <!-- Footer Section Here Starts 000000000000000000000000000000000 -->
     <section class="fooder-head">
         <div class="link-container">
             <div class="fooder-img">
@@ -115,9 +125,10 @@
         <hr class="line">
 
         <div class="fooder-end">
-            <p>  <b>© 2026 Personal Knowledge Vault. All rights reserved.</b></p>
+            <p><b>© 2026 Personal Knowledge Vault. All rights reserved.</b></p>
         </div>
     </section>
+    <!-- Footer Section Here end 00000000000000000000000 -->
 
 </body>
 </html>
